--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,82 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+body {
+  font-family: "Saans TRIAL";
+  background: #000;
+}
+a,
+p {
+  color: #000;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
+p {
+  margin: 0;
+}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.page-content {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding: 6em 2em;
+}
+
+.page-content.hero {
+  background: url("./assets/hero.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.page-content.contact {
+  background: url("./assets/contact.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.page-content.about {
+  background: url("./assets/about.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.page-content.work {
+  background: url("./assets/work.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.page-content.lab {
+  background: url("./assets/lab.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 5.6vw;
+  font-weight: 400;
+  letter-spacing: -0.04em;
+  color: #fff;
+}
+h1 sup {
+  position: relative;
+  top: -20px;
+  left: 10px;
+  font-size: 1.5vw;
+  letter-spacing: 0;
+}
+
+@media (max-width: 900px) {
+  .page-content h1 {
+    font-size: 10vw;
+  }
+  h1 sup {
+    font-size: 4vw;
   }
 }
