--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,25 +33,25 @@ p {
 }
 
 .page-content.hero {
-  background: url("./assets/`hero.png") no-repeat 50% 50%;
+  background: url("/assets/hero.png") no-repeat 50% 50%;
   background-size: cover;
 }
 
 .page-content.contact {
-  background: url("./assets/`contact.png") no-repeat 50% 50%;
+  background: url("/assets/contact.png") no-repeat 50% 50%;
   background-size: cover;
 }
 
 .page-content.about {
-  background: url("./assets/`about.png") no-repeat 50% 50%;
+  background: url("/assets/about.png") no-repeat 50% 50%;
   background-size: cover;
 }
 .page-content.work {
-  background: url("./assets/`work.png") no-repeat 50% 50%;
+  background: url("/assets/work.png") no-repeat 50% 50%;
   background-size: cover;
 }
 .page-content.lab {
-  background: url("./assets/`lab.png") no-repeat 50% 50%;
+  background: url("/assets/lab.png") no-repeat 50% 50%;
   background-size: cover;
 }
 h1 {
